Closed
Bug 571618
Opened 15 years ago
Closed 15 years ago
"ASSERTION: should only care when we have an outside bullet"
Categories
(Core :: Layout, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: jruderman, Assigned: bzbarsky)
References
Details
(Keywords: assertion, testcase)
Attachments
(2 files)
|
117 bytes,
image/svg+xml
|
Details | |
|
1.77 KB,
patch
|
roc
:
review+
|
Details | Diff | Splinter Review |
###!!! ASSERTION: should only care when we have an outside bullet: '(GetStyleDisplay()->mDisplay == NS_STYLE_DISPLAY_LIST_ITEM || (GetStyleContext()->GetPseudo() == nsCSSAnonBoxes::scrolledContent && GetParent()->GetStyleDisplay()->mDisplay == NS_STYLE_DISPLAY_LIST_ITEM)) && HaveOutsideBullet()', file layout/generic/nsBlockFrame.cpp, line 6422
Regression from bug 571281?
| Assignee | ||
Comment 1•15 years ago
|
||
Yes, I forgot to update the assert to match the code...
Blocks: 571281
| Assignee | ||
Comment 2•15 years ago
|
||
Hmm. So this is not that hard to fix, but should foreignObjects with this display value really get bullets? With the fix for bug 571281, they do.
| Assignee | ||
Comment 3•15 years ago
|
||
Attachment #450811 -
Flags: review?(roc) → review+
| Assignee | ||
Comment 4•15 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•