Bug 571618.  Fix asertion to match reality.  r=roc